{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 28,
  "lineage": "d39d296f-3177-9ba5-dcc4-b612d174fb3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "glps_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:471112932176:instance/i-0a4b87dfa45768011",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4b87dfa45768011",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "glpsk370-ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0678fa5a3b5934413",
            "private_dns": "ip-11-0-1-129.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.129",
            "public_dns": "ec2-13-202-82-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.82.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07852be43bbe92f06",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be42884cefe8d3b7",
            "tags": {
              "Name": "glps_test_instance"
            },
            "tags_all": {
              "Name": "glps_test_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029094ab327a70677"
            ]
          },
          "dependencies": [
            "aws_security_group.glps_sg",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "glps_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:internet-gateway/igw-08e451046f4736561",
            "id": "igw-08e451046f4736561",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps_test_igw"
            },
            "tags_all": {
              "Name": "glps_test_igw"
            },
            "vpc_id": "vpc-0c6fa636ac2c50e56"
          },
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "glps_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-0aa4bd5112a73d289",
            "id": "rtb-0aa4bd5112a73d289",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e451046f4736561",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "glps_test_rt"
            },
            "tags_all": {
              "Name": "glps_test_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6fa636ac2c50e56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.glps_igw",
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "glps_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f05ae73dbefa5b9b",
            "route_table_id": "rtb-0aa4bd5112a73d289",
            "subnet_id": "subnet-0be42884cefe8d3b7"
          },
          "dependencies": [
            "aws_internet_gateway.glps_igw",
            "aws_route_table.glps_rt",
            "aws_subnet.glps_subnet",
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "glps_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-029094ab327a70677",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029094ab327a70677",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "glps_sg",
            "name_prefix": "",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "glps_test_sg"
            },
            "tags_all": {
              "Name": "glps_test_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6fa636ac2c50e56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "glps_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0be42884cefe8d3b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be42884cefe8d3b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps_test_subnet"
            },
            "tags_all": {
              "Name": "glps_test_subnet"
            },
            "vpc_id": "vpc-0c6fa636ac2c50e56"
          },
          "dependencies": [
            "aws_vpc.glps_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "glps_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:vpc/vpc-0c6fa636ac2c50e56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-081d194b73eb33c8d",
            "default_route_table_id": "rtb-01bdc9ce73e1c0982",
            "default_security_group_id": "sg-02ded4fae8c80961d",
            "dhcp_options_id": "dopt-003721dbdea12b4ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6fa636ac2c50e56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bdc9ce73e1c0982",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps_test_vpc"
            },
            "tags_all": {
              "Name": "glps_test_vpc"
            }
          }
        }
      ]
    }
  ]
}